--- a/Python-Gui.ipynb
+++ b/Python-Gui.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "collapsed": false
    },
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
@@ -39,7 +39,7 @@
     "# B = tk.Button(top, width=10, height=10, text=\"hello\", fg='blue', command=helloCallback)\n",
     "# B.pack()\n",
     "\n",
-    "canvas = tk.Canvas(top, bg='blue', width=300, height=250)\n",
+    "canvas = tk.Canvas(top, width=300, height=250)\n",
     "\n",
     "#draw an arc\n",
     "coord = 10, 50, 240, 210\n",
@@ -47,6 +47,9 @@
     "\n",
     "#draw a line\n",
     "line = canvas.create_line(0,0, 50, 50, fill='red')\n",
+    "\n",
+    "filename = ImageTk.PhotoImage(file = \"icons/red_circle1.png\")\n",
+    "image = canvas.create_image(50, 50, anchor=tk.NE, image=filename)\n",
     "\n",
     "#draw a line\n",
     "line = canvas.create_oval(0,0, 50, 50, fill='red')\n",
@@ -157,17 +160,7 @@
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "User entered:  T\n",
-      "hello\n",
-      "hello\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import tkinter as tk\n",
     "from PIL import Image\n",
@@ -213,14 +206,16 @@
     "    user_frame.place(x=30, y=150)\n",
     "    \n",
     "    #user question label\n",
-    "    question_label = tk.Label(user_frame, anchor=\"center\", text=\"Remember something\", bg='black', fg='white')\n",
+    "    label_text = tk.StringVar()\n",
+    "    label_text.set(\"Remember something\")\n",
+    "    question_label = tk.Label(user_frame, anchor=\"center\", textvariable=label_text, bg='black', bd=0, fg='white')\n",
     "    question_label.bind(\"<Button-1>\", callback)\n",
     "    question_label.pack(side='top')\n",
     "    \n",
     "    #user answer label\n",
     "    #wrap our validate method by registering with parent widget\n",
     "    vcmd = user_frame.register(validate)\n",
-    "    entry = tk.Entry(user_frame, bg='black', fg='white', validate='key', validatecommand=(vcmd, '%P'))\n",
+    "    entry = tk.Entry(user_frame, bg='black', bd=0, fg='white', validate='key', validatecommand=(vcmd, '%P'))\n",
     "    entry.pack(side='top')\n",
     "    \n",
     "    ######right screen\n",
@@ -237,6 +232,7 @@
     "#initialize the UI toolkit\n",
     "root = tk.Tk()\n",
     "# root.resizable(width=True, height=True)\n",
+    "# root.geometry(\"550x300+300+150\")\n",
     "\n",
     "loadGui(root)\n",
     "\n",
