feat: Practiced threading and its use with Tkinter

--- a/Python-Gui.ipynb
+++ b/Python-Gui.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
@@ -241,6 +241,123 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {
+    "collapsed": true
+   },
+   "source": [
+    "## Theading "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "import threading\n",
+    "import time\n",
+    "\n",
+    "class MyThread(threading.Thread):\n",
+    "    def __init__(self):\n",
+    "        threading.Thread.__init__(self)\n",
+    "        \n",
+    "    def run(self):\n",
+    "        print(\"Thread started\")\n",
+    "        time.sleep(5)\n",
+    "        print(\"Thread ended\")\n",
+    "        \n",
+    "myThread = MyThread()\n",
+    "myThread.start()\n",
+    "\n",
+    "#wait for myThread to finish\n",
+    "myThread.join()\n",
+    "\n",
+    "print(\"Main Thread exited\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Threading and Tkinter"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Image read\n"
+     ]
+    }
+   ],
+   "source": [
+    "import threading\n",
+    "import tkinter as tk\n",
+    "from PIL import Image\n",
+    "from PIL import ImageTk\n",
+    "import cv2\n",
+    "import queue\n",
+    "\n",
+    "\n",
+    "#callback queue common to background thread and main thread\n",
+    "callback_queue = queue.Queue()\n",
+    "\n",
+    "class ImageThread(threading.Thread):\n",
+    "    def __init__(self):\n",
+    "        threading.Thread.__init__(self)\n",
+    "        self.image_path = \"data/test1.jpg\"\n",
+    "        \n",
+    "    def run(self):\n",
+    "        image = cv2.imread(self.image_path)\n",
+    "        image = cv2.cvtColor(image, cv2.COLOR_BGR2RGB)\n",
+    "\n",
+    "        print(\"Image read\")\n",
+    "        image = Image.fromarray(image)\n",
+    "        \n",
+    "        #put \"update_on_main_thread(self, image)\" function to Queue for main thread \n",
+    "        #to get it from queue and execute it\n",
+    "        callback_queue.put((lambda: self.update_on_main_thread(image)))\n",
+    "        \n",
+    "    def update_on_main_thread(self, image):\n",
+    "        image_tk = ImageTk.PhotoImage(image)\n",
+    "        #try updating UI from here\n",
+    "        label.configure(image=image_tk)\n",
+    "        label.image = image_tk\n",
+    "        \n",
+    "def run_on_main_thread(root):\n",
+    "    try:\n",
+    "        callback = callback_queue.get()\n",
+    "        callback()\n",
+    "    except queue.Empty:\n",
+    "        root.update_idletasks()\n",
+    "        root.after(100, run_on_main_thread, root)\n",
+    "        \n",
+    "\n",
+    "#initialize the UI toolkit\n",
+    "root = tk.Tk()\n",
+    "\n",
+    "label = tk.Label(root)\n",
+    "label.pack(side=\"left\", fill=\"both\", expand=\"yes\", padx=10, pady=10)\n",
+    "\n",
+    "imgThread = ImageThread()\n",
+    "imgThread.start()\n",
+    "        \n",
+    "run_on_main_thread(root)\n",
+    "#start UI mainloop\n",
+    "root.mainloop()"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
@@ -251,6 +368,7 @@
   }
  ],
  "metadata": {
+  "anaconda-cloud": {},
   "kernelspec": {
    "display_name": "Python 3",
    "language": "python",
